feat: Creating initial structure for the User management and separation between Company and Candidate
