# src/main/java/com/gabrieldears/talent_forge/adapter/web/CandidateController.java
@@ -60,6 +60,7 @@ public class CandidateController implements com.gabrieldears.talent_forge.api.Ca
     public ResponseEntity<CandidateResponse> candidatesPost(
             @Parameter(name = "name") @Valid @RequestParam(value = "name") String name,
             @Parameter(name = "email") @Valid @RequestParam(value = "email") String email,
+            @Parameter(name = "email") @Valid @RequestParam(value = "password") String password,
             @Parameter(name = "skills") @Valid @RequestParam(value = "skills", required = false) List<String> skills,
             @Parameter(name = "experienceYears") @Valid @RequestParam(value = "experienceYears") Integer experienceYears,
             @Parameter(name = "resume") @RequestPart(value = "resume", required = false) MultipartFile resume
@@ -67,6 +68,7 @@ public class CandidateController implements com.gabrieldears.talent_forge.api.Ca
         CandidateRequestDto candidateRequestDto = new CandidateRequestDto(
                 name,
                 email,
+                password,
                 experienceYears,
                 skills,
                 resume
@@ -86,6 +88,7 @@ public class CandidateController implements com.gabrieldears.talent_forge.api.Ca
             @Parameter(name = "id", required = true, in = ParameterIn.PATH) @PathVariable("id") String id,
             @Parameter(name = "name") @Valid @RequestParam(value = "name") String name,
             @Parameter(name = "email") @Valid @RequestParam(value = "email") String email,
+            @Parameter(name = "email") @Valid @RequestParam(value = "password") String password,
             @Parameter(name = "skills") @Valid @RequestParam(value = "skills", required = false) List<String> skills,
             @Parameter(name = "experienceYears") @Valid @RequestParam(value = "experienceYears") Integer experienceYears,
             @Parameter(name = "resume") @RequestPart(value = "resume", required = false) MultipartFile resume
@@ -93,6 +96,7 @@ public class CandidateController implements com.gabrieldears.talent_forge.api.Ca
         CandidateRequestDto candidateRequestDto = new CandidateRequestDto(
                 name,
                 email,
+                password,
                 experienceYears,
                 skills,
                 resume
